<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_learn">

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.hang.ui.learn.Learn"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_recommend"
        android:name="com.example.hang.ui.recom.Recommend"
        android:label="@string/title_recommend"
        tools:layout="@layout/fragment_recommend" />

    <fragment
        android:id="@+id/navigation_communicate"
        android:name="com.example.hang.ui.commu.Communicate"
        android:label="@string/title_communicate"
        tools:layout="@layout/fragment_communicate" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.hang.ui.mine.Mine"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>