<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:gravity="center_horizontal"
android:layoutAnimation="@anim/layout_from_bottom"
android:orientation="vertical"
tools:context=".LoginActivity"
tools:layoutAnimation="@null">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_register_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_80"
    android:text="@string/login_text"
    android:textColor="@color/black60"
    android:textSize="@dimen/sp_23" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/iv_login_logo"
    android:layout_width="@dimen/dp_60"
    android:layout_height="@dimen/dp_60"
    android:layout_marginVertical="@dimen/dp_10" />

<LinearLayout
    android:id="@+id/ll_login_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.example.hang.ui.mine.utils.view.ClearEditText
        android:id="@+id/user_input"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/common_name_input_hint"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        app:regexType="name" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <com.example.hang.ui.mine.utils.view.PasswordEditText
        android:id="@+id/password_input"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/common_password_input_error"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_60"
        android:text="@string/login_forget"
        android:textColor="@color/common_accent_color" />

    <com.example.hang.ui.mine.utils.view.SubmitButton
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/login_text" />

    <com.example.hang.ui.mine.utils.view.SubmitButton
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/login_register" />

</LinearLayout>

<View
    android:layout_width="wrap_content"
    android:layout_height="0px"
    android:layout_weight="1" />

<LinearLayout
    android:id="@+id/ll_login_other"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <View
        style="@style/HorizontalLineStyle"
        android:layout_width="@dimen/dp_60"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:text="@string/login_other"
        android:textColor="@color/black50" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_width="@dimen/dp_60"
        android:layout_weight="1" />
</LinearLayout>

</LinearLayout>