<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:layoutAnimation="@anim/layout_fall_down"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_40"
        tools:layoutAnimation="@null">

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/question_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/book_add_content_question"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/book_add_content_choice_A"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/book_add_content_choice_A"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/book_add_content_choice_B"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/book_add_content_choice_B"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/book_add_content_choice_C"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/book_add_content_choice_C"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/book_add_content_choice_D"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/book_add_content_choice_D"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

<!--        <com.example.hang.ui.mine.utils.view.RegexEditText-->
<!--            android:id="@+id/answer_input"-->
<!--            style="@style/EditTextStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/dp_20"-->
<!--            android:hint="@string/book_add_content_answer"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:maxLength="20"-->
<!--            android:minHeight="48dp"-->
<!--            android:singleLine="true"-->
<!--            android:textColorHint="#757575" />-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/dp_5"-->
<!--            android:layout_marginStart="@dimen/dp_5"-->
<!--            android:text="@string/book_add_content_answer_format"-->
<!--            android:textSize="@dimen/sp_12">-->
<!--        </TextView>-->

<!--        <View-->
<!--            style="@style/HorizontalLineStyle"-->
<!--            android:layout_gravity="bottom" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/btn_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_A"
                    android:button="@drawable/radiobutton_selector"
                    android:checked="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/btn_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_B"
                    android:button="@drawable/radiobutton_selector"
                    android:enabled="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/btn_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_C"
                    android:button="@drawable/radiobutton_selector"
                    android:enabled="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/btn_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_D"
                    android:button="@drawable/radiobutton_selector"
                    android:enabled="true" />
            </RadioGroup>
        </LinearLayout>

        <com.example.hang.ui.mine.utils.view.SubmitButton
            android:id="@+id/btn_confirm"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_40"
            android:text="@string/common_confirm"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>