<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.mine.myBooks.AddQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:layoutAnimation="@anim/layout_fall_down"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_40"
        tools:layoutAnimation="@null">

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/post_title_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/post_title_input_hint"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/post_tag_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/post_tag_input_hint"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.ClearEditText
            android:id="@+id/post_content_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="left"
            android:hint="@string/post_content_input_hint"
            android:imeOptions="actionDone"
            android:maxLength="1024"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:regexType="anything" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_gravity="bottom" />

        <com.example.hang.ui.mine.utils.view.SubmitButton
            android:id="@+id/btn_send_post"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_40"
            android:text="@string/post_confirm"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>